--- a/html/mentions_legales.html
+++ b/html/mentions_legales.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/23924f6e83.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<title>La note enchantée</title>
 </head>
 <body>
