--- a/index.html
+++ b/index.html
@@ -7,49 +7,52 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<title>Ohmyfood ! </title>
 </head>
-<body>
+<body id="home">
 	<header>
 		<h1>ohmyfood</h1>
 	</header>
 	<main class="grid">
-
-			<section class="grid__menu">
-				<a href="html/menu_note.html">
+		<div class="grid__menu">
+			
+			<a href="html/menu_note.html">
+				<section class="grid__menu--note">
 					<div class="zoom">
 						<i class="fas fa-music"></i>
 						<h2>La note enchantée</h2>
 						<h3>Menu</h3>
 					</div>
-				</a>
-			</section>
-
-			<section class="grid__menu--chic">
-				<a href="menu_chic">
+				</section>
+			</a>
+			
+			
+			<a href="menu_chic">
+				<section class="grid__menu--chic">
 					<div class="zoom">
 						<h2>Le chic à la française</h2>
 						<h3>Menu</h3>
 					</div>
-				</a>
-			</section>
-
-			<section class="grid__menu--delice">
-				<a href="menu_delice">
+				</section>
+			</a>
+		</div>
+		<div class="grid__menu">
+			<a href="menu_delice">
+				<section class="grid__menu--delice">
 					<div class="zoom">
 						<h2>Le délice des papilles</h2>
 						<h3>Menu</h3>
 					</div>
-				</a>
-			</section>
+				</section>
+			</a>
 
-			<section class="grid__menu--palette">
-				<a href="menu_palette">
+			<a href="menu_palette">
+				<section class="grid__menu--palette">
 					<div class="zoom">
 						<h2>La palette du goût</h2>
 						<h3>Menu</h3>
 					</div>
-				</a>
-			</section>
-
+				</section>
+			</a>
+		</div>
 		<div class="prochainement">
 			<p>Prochainement</p>
 		</div>
