home page's color background+text + font

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 	</main>
 	<footer>
-		<a href="./html/mentions_legales.html">Mentions Légales</a>
+		<a href="./html/mentions_legales.html">Mentions légales</a>
 		<a href="mailto:contact@omf.com">Contactez-nous</a>
 	</footer>
 </body>
