--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<header>
 		<h1>ohmyfood</h1>
 	</header>
-	<main class="grid">
+	<main>
 		<div class="grid__menu">
 			
 			<a href="html/menu_note.html">
-				<section class="grid__menu--note">
+				<section class="grid__menu--note note">
 					<div class="zoom">
 						<i class="fas fa-music"></i>
 						<h2>La note enchantée</h2>
