--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<div class="zoom">
 						<i class="fas fa-music"></i>
 						<h2>La note enchantée</h2>
-						<h3>Menu</h3>
+						<h3>MENU</h3>
 					</div>
 				</section>
 			</a>
