--- a/html/menu_note.html
+++ b/html/menu_note.html
@@ -14,7 +14,7 @@
 		</a>
 	</header>
 	<main>
-		<h2 >La note enchantée</h2>
+		<h2 class="first">La note enchantée</h2>
 		<section class="menu">
 			<div class="restaurant__start">
 				<i class="fas fa-music"></i>
