refactoring + chic menu layout

--- a/html/menu_note.html
+++ b/html/menu_note.html
@@ -26,34 +26,34 @@
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--plat">
+				<p class="details_plat">
 					Ravioles de foie gras accompagnés de leur crème à la truffe
 				</p>
-				<p class="menu__details--prix">
+				<p class="details_prix">
 					98€
 				</p>
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--plat">
+				<p class="details_plat">
 					Caviar osciètre sur blini à la farine de blé noir
 				</p>
-				<p class="menu__details--prix">
+				<p class="details_prix">
 					115€
 				</p>
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--plat">
+				<p class="details_plat">
 					Homard et espuma de potiron mariné aux zestes d'orange
 				</p>
-				<p class="menu__details--prix">
+				<p class="details_prix">
 					89€
 				</p>
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--plat">
+				<p class="details_plat">
 					Foie gras de canard cuit entier, confiture de figue et pain toasté
 				</p>
-				<p class="menu__details--prix">
+				<p class="details_prix">
 					105€
 				</p>
 			</div>
@@ -63,26 +63,26 @@
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--plat">
+				<p class="details_plat">
 					Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave
 				</p>
-				<p class="menu__details--prix">
+				<p class="details_prix">
 					102€
 				</p>
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--plat">
+				<p class="details_plat">
 					Langoustine poêlée, purée de patate douce
 				</p>
-				<p class="menu__details--prix">
+				<p class="details_prix">
 					205€
 				</p>
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--plat">
+				<p class="details_plat">
 					Mijoté de queue de boeuf et riz sauvage aux zests de citron
 				</p>
-				<p class="menu__details--prix">
+				<p class="details_prix">
 					169€
 				</p>
 			</div>
@@ -92,17 +92,17 @@
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--dessert">
+				<p class="details_dessert">
 					Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
 				</p>
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--dessert">
+				<p class="details_dessert">
 					Baba au rhum revisité avec son coulis de citron
 				</p>
 			</div>
 			<div class="menu__details">
-				<p class="menu__details--dessert">
+				<p class="details_dessert">
 					Tarte au citron meringuée destructurée
 				</p>
 			</div>
