--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<h1>ohmyfood</h1>
 	</header>
 	<main>
-		<div class="grid__menu">
+		<div class="grid">
 			
 			<a href="html/menu_note.html">
-				<section class="grid__menu--note note">
+				<section class="menu_note">
 					<div class="zoom">
 						<i class="fas fa-music"></i>
 						<h2>La note enchantée</h2>
@@ -25,8 +25,8 @@
 			</a>
 			
 			
-			<a href="menu_chic">
-				<section class="grid__menu--chic">
+			<a href="html/menu_chic.html">
+				<section class="menu_chic">
 					<div class="zoom">
 						<h2>Le chic à la française</h2>
 						<h3>Menu</h3>
@@ -34,9 +34,9 @@
 				</section>
 			</a>
 		</div>
-		<div class="grid__menu">
+		<div class="grid">
 			<a href="menu_delice">
-				<section class="grid__menu--delice">
+				<section class="menu_delice">
 					<div class="zoom">
 						<h2>Le délice des papilles</h2>
 						<h3>Menu</h3>
@@ -45,7 +45,7 @@
 			</a>
 
 			<a href="menu_palette">
-				<section class="grid__menu--palette">
+				<section class="menu_palette">
 					<div class="zoom">
 						<h2>La palette du goût</h2>
 						<h3>Menu</h3>
