--- a/html/menu_note.html
+++ b/html/menu_note.html
@@ -16,16 +16,16 @@
 	<main>
 		<h2 class="first">La note enchantée</h2>
 		<section class="menu">
-			<div class="restaurant__start">
+			<div class="restaurant_start">
 				<i class="fas fa-music"></i>
 				<h2>La note enchantée</h2>
 			</div>
-			<div class="menu__intitule">
+			<div class="menu_intitule">
 				<img src="../img/menu1-droit.png" alt="decoration">
 				<h3>Prélude</h3>
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_plat">
 					Ravioles de foie gras accompagnés de leur crème à la truffe
 				</p>
@@ -33,7 +33,7 @@
 					98€
 				</p>
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_plat">
 					Caviar osciètre sur blini à la farine de blé noir
 				</p>
@@ -41,7 +41,7 @@
 					115€
 				</p>
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_plat">
 					Homard et espuma de potiron mariné aux zestes d'orange
 				</p>
@@ -49,7 +49,7 @@
 					89€
 				</p>
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_plat">
 					Foie gras de canard cuit entier, confiture de figue et pain toasté
 				</p>
@@ -57,12 +57,12 @@
 					105€
 				</p>
 			</div>
-			<div class="menu__intitule">
+			<div class="menu_intitule">
 				<img src="../img/menu1-droit.png" alt="decoration">
 				<h3>Point d'orgue</h3>
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_plat">
 					Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave
 				</p>
@@ -70,7 +70,7 @@
 					102€
 				</p>
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_plat">
 					Langoustine poêlée, purée de patate douce
 				</p>
@@ -78,7 +78,7 @@
 					205€
 				</p>
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_plat">
 					Mijoté de queue de boeuf et riz sauvage aux zests de citron
 				</p>
@@ -86,27 +86,27 @@
 					169€
 				</p>
 			</div>
-			<div class="menu__intitule">
+			<div class="menu_intitule">
 				<img src="../img/menu1-droit.png" alt="decoration">
 				<h3>Mouvement final</h3>
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_dessert">
 					Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
 				</p>
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_dessert">
 					Baba au rhum revisité avec son coulis de citron
 				</p>
 			</div>
-			<div class="menu__details">
+			<div class="menu_details">
 				<p class="details_dessert">
 					Tarte au citron meringuée destructurée
 				</p>
 			</div>
-			<div class="restaurant__end">
+			<div class="restaurant_end">
 				<i class="fas fa-music"></i>
 				<h2>La note enchantée</h2>
 			</div>
