--- a/html/menu_palette.html
+++ b/html/menu_palette.html
@@ -5,103 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/23924f6e83.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <title>Le chic à la française</title>
+    <title>La palette du goût</title>
 </head>
-<body id="chic">
+<body id="palette">
     <header>
         <a href="../index.html">
             <h1>ohmyfood</h1>
         </a>
     </header>
     <main>
-        <h2 class="first">Le chic à la française</h2>
+        <h2 class="first">La palette du goût</h2>
         <section class="menu">
             <div class="restaurant_start">
-                <h2>Le chic à la française</h2>
+                <h2>La palette du goût</h2>
             </div>
-            <div class="one">
             <div class="menu_intitule">
-                <img src="../img/menu2-a-gauche.png" alt="decoration">
-                <h3>Pour se mettre en appétit</h3>
-                <img src="../img/menu2-a-droit.png" alt="decoration">
+                <img src="../img/menu4-gauche.png" alt="decoration">
+                <h3>Esquisse</h3>
+                <img src="../img/menu4-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                   Tartare de poulpe acidulé aux zests d'orange
+                   Fricasséee d'escargot au piment d'espelette
                 </p>
                 <p class="details_prix">
-                    79€
-                </p>
-            </div>
-            <div class="menu_details">
-                <p class="details_plat">
-                    Velouté de légumes d'antan
-                </p>
-                <p class="details_prix">
-                    57€
+                    60€
                 </p>
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                   Soupe à l'oignon revisitée
+                    Oeuf au plat assaisonné à la truffe sur lit de caviar
                 </p>
                 <p class="details_prix">
-                    57€
+                    55€
                 </p>
             </div>
+            <div class="menu_details">
+                <p class="details_plat">
+                   Foie gras de canard mi-cuit et ses copeaux de truffe noire
+                </p>
+                <p class="details_prix">
+                    65€
+                </p>
             </div>
-            <div class="two">
             <div class="menu_intitule">
-                <img src="../img/menu2-b-gauche.png" alt="decoration">
-                <h3>Plaisir des papilles</h3>
-                <img src="../img/menu2-b-droit.png" alt="decoration">
+                <img src="../img/menu4-gauche.png" alt="decoration">
+                <h3>Oeuvre de maître</h3>
+                <img src="../img/menu4-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                    Coquilles Saint-Jacques accompagnées d'une purée de panais
+                    Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
                 </p>
                 <p class="details_prix">
-                    95€
-                </p>
-            </div>
-            <div class="menu_details">
-                <p class="details_plat">
-                    Magret de canard et parmentier de pommes de terre
-                </p>
-                <p class="details_prix">
-                    88€
+                    70€
                 </p>
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                    Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes
+                    Parmentier de queue de boeuf à la truffe noire sur sa purée de panais
                 </p>
                 <p class="details_prix">
-                    175€
+                    85€
                 </p>
             </div>
+            <div class="menu_details">
+                <p class="details_plat">
+                    Filet de Turbot aux légumes
+                </p>
+                <p class="details_prix">
+                    125€
+                </p>
             </div>
-            <div class="three">
             <div class="menu_intitule">
-                <img src="../img/menu2-c-gauche.png" alt="decoration">
-                <h3>Gourmandises sucrées</h3>
-                <img src="../img/menu2-c-droit.png" alt="decoration">
+                <img src="../img/menu4-gauche.png" alt="decoration">
+                <h3>Au sommet de l'art</h3>
+                <img src="../img/menu4-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
-                <p class="details_dessert">
-                    Pétales de violettes glacés et purée de noisettes
+                <p class="details_plat">
+                    Paris-Brest revisité
+                </p>
+                <p class="details_prix">
+                    55€
                 </p>
             </div>
             <div class="menu_details">
-                <p class="details_dessert">
-                    Fondant au chocolat revisité
+                <p class="details_plat">
+                    Macaron au chocolat d'exception et glace à la vanille de Madagascar
+                </p>
+                <p class="details_prix">
+                    65€
                 </p>
             </div>
             <div class="menu_details">
-                <p class="details_dessert">
-                    Millefeuille croustillant
+                <p class="details_plat">
+                    Mousse au chocolat au piment d'espelette et à la truffe noire
                 </p>
-            </div>
+                <p class="details_prix">
+                    60€
+                </p>
             </div>
         </section>
     </main>
