--- a/html/menu_delice.html
+++ b/html/menu_delice.html
@@ -5,103 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/23924f6e83.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <title>Le chic à la française</title>
+    <title>Le délice des papilles</title>
 </head>
-<body id="chic">
+<body id="delice">
     <header>
         <a href="../index.html">
             <h1>ohmyfood</h1>
         </a>
     </header>
     <main>
-        <h2 class="first">Le chic à la française</h2>
+        <h2 class="first">Le délice des papilles</h2>
         <section class="menu">
             <div class="restaurant_start">
-                <h2>Le chic à la française</h2>
+                <h2>Le délice des papilles</h2>
             </div>
-            <div class="one">
             <div class="menu_intitule">
-                <img src="../img/menu2-a-gauche.png" alt="decoration">
-                <h3>Pour se mettre en appétit</h3>
-                <img src="../img/menu2-a-droit.png" alt="decoration">
+                <img src="../img/menu3-gauche.png" alt="decoration">
+                <h3>Pour bien commencer</h3>
+                <img src="../img/menu3-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                   Tartare de poulpe acidulé aux zests d'orange
+                   Tartare de thon assaisonné au yuzu
                 </p>
                 <p class="details_prix">
-                    79€
-                </p>
-            </div>
-            <div class="menu_details">
-                <p class="details_plat">
-                    Velouté de légumes d'antan
-                </p>
-                <p class="details_prix">
-                    57€
+                    55€
                 </p>
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                   Soupe à l'oignon revisitée
+                    Bouchée de homard croustillant et sa friandise de petits légumes
                 </p>
                 <p class="details_prix">
-                    57€
+                    89€
                 </p>
             </div>
+            <div class="menu_details">
+                <p class="details_plat">
+                   Velouté de cèpes aux truffes
+                </p>
+                <p class="details_prix">
+                    56€
+                </p>
             </div>
-            <div class="two">
             <div class="menu_intitule">
-                <img src="../img/menu2-b-gauche.png" alt="decoration">
-                <h3>Plaisir des papilles</h3>
-                <img src="../img/menu2-b-droit.png" alt="decoration">
+                <img src="../img/menu3-gauche.png" alt="decoration">
+                <h3>Pour bien continuer</h3>
+                <img src="../img/menu3-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                    Coquilles Saint-Jacques accompagnées d'une purée de panais
+                    Poulet rôti aux herbes de provence et sa crème de truffe
                 </p>
                 <p class="details_prix">
-                    95€
-                </p>
-            </div>
-            <div class="menu_details">
-                <p class="details_plat">
-                    Magret de canard et parmentier de pommes de terre
-                </p>
-                <p class="details_prix">
-                    88€
+                    110€
                 </p>
             </div>
             <div class="menu_details">
                 <p class="details_plat">
-                    Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes
+                    Langouste rôtie et ses légumes de saison
                 </p>
                 <p class="details_prix">
-                    175€
+                    225€
                 </p>
             </div>
+            <div class="menu_details">
+                <p class="details_plat">
+                    Côte de boeuf angus et sa purée de panais
+                </p>
+                <p class="details_prix">
+                    115€
+                </p>
             </div>
-            <div class="three">
             <div class="menu_intitule">
-                <img src="../img/menu2-c-gauche.png" alt="decoration">
-                <h3>Gourmandises sucrées</h3>
-                <img src="../img/menu2-c-droit.png" alt="decoration">
+                <img src="../img/menu3-gauche.png" alt="decoration">
+                <h3>Pour bien terminer</h3>
+                <img src="../img/menu3-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
-                <p class="details_dessert">
-                    Pétales de violettes glacés et purée de noisettes
+                <p class="details_plat">
+                    Farandole de desserts du chef
+                </p>
+                <p class="details_prix">
+                    55€
                 </p>
             </div>
             <div class="menu_details">
-                <p class="details_dessert">
-                    Fondant au chocolat revisité
+                <p class="details_plat">
+                    Crème brûlée revisitée
+                </p>
+                <p class="details_prix">
+                    60€
                 </p>
             </div>
             <div class="menu_details">
-                <p class="details_dessert">
-                    Millefeuille croustillant
+                <p class="details_plat">
+                    Tiramisu à la noisette
                 </p>
-            </div>
+                <p class="details_prix">
+                    55€
+                </p>
             </div>
         </section>
     </main>
