--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</a>
 		</div>
 		<div class="grid">
-			<a href="menu_delice">
+			<a href="html/menu_delice.html">
 				<section class="menu_delice">
 					<div class="zoom">
 						<h2>Le délice des papilles</h2>
@@ -44,7 +44,7 @@
 				</section>
 			</a>
 
-			<a href="menu_palette">
+			<a href="html/menu_palette.html">
 				<section class="menu_palette">
 					<div class="zoom">
 						<h2>La palette du goût</h2>
