--- a/html/menu_chic.html
+++ b/html/menu_chic.html
@@ -17,7 +17,7 @@
         <h2 class="first">Le chic à la française</h2>
         <section class="menu">
             <div class="restaurant_start">
-                <h2>Le chic à la française</h2>
+                <p>Le chic à la française</p>
             </div>
             <div class="one">
             <div class="menu_intitule">
