--- a/html/menu_delice.html
+++ b/html/menu_delice.html
@@ -14,7 +14,7 @@
         </a>
     </header>
     <main>
-        <h2 class="first">Le délice des papilles</h2>
+        <p class="intro">Le délice des papilles</p>
         <section class="menu">
             <div class="restaurant_start">
                 <h2>Le délice des papilles</h2>
