--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 			</a>
 		</div>
 		<div class="prochainement">
-			<p>Prochainement</p>
+				Prochainement
+				<span id="pt1">.</span>
+				<span id="pt2">.</span>
+				<span id="pt3">.</span>
 		</div>
 	</main>
 	<footer>
