--- a/html/menu_chic.html
+++ b/html/menu_chic.html
@@ -14,10 +14,10 @@
         </a>
     </header>
     <main>
-        <h2 class="first">Le chic à la française</h2>
+        <p class="intro">Le chic à la française</p>
         <section class="menu">
             <div class="restaurant_start">
-                <p>Le chic à la française</p>
+                <h2>Le chic à la française</h2>
             </div>
             <div class="one">
             <div class="menu_intitule">
