--- a/html/menu_palette.html
+++ b/html/menu_palette.html
@@ -14,7 +14,7 @@
         </a>
     </header>
     <main>
-        <h2 class="first">La palette du goût</h2>
+        <p class="intro">La palette du goût</p>
         <section class="menu">
             <div class="restaurant_start">
                 <h2>La palette du goût</h2>
