add line animation

--- a/html/menu_chic.html
+++ b/html/menu_chic.html
@@ -22,7 +22,10 @@
             <div class="one">
             <div class="menu_intitule">
                 <img src="../img/menu2-a-gauche.png" alt="decoration">
-                <h3>Pour se mettre en appétit</h3>
+                <div class="intitule">
+                    <h3>Pour se mettre en appétit</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu2-a-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
@@ -53,7 +56,10 @@
             <div class="two">
             <div class="menu_intitule">
                 <img src="../img/menu2-b-gauche.png" alt="decoration">
-                <h3>Plaisir des papilles</h3>
+                <div class="intitule">
+                    <h3>Plaisir des papilles</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu2-b-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
@@ -84,7 +90,10 @@
             <div class="three">
             <div class="menu_intitule">
                 <img src="../img/menu2-c-gauche.png" alt="decoration">
-                <h3>Gourmandises sucrées</h3>
+                <div class="intitule">
+                    <h3>Gourmandises sucrées</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu2-c-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
