--- a/html/menu_delice.html
+++ b/html/menu_delice.html
@@ -21,7 +21,10 @@
             </div>
             <div class="menu_intitule">
                 <img src="../img/menu3-gauche.png" alt="decoration">
-                <h3>Pour bien commencer</h3>
+                <div class="intitule">
+                    <h3>Pour bien commencer</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu3-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
@@ -50,7 +53,10 @@
             </div>
             <div class="menu_intitule">
                 <img src="../img/menu3-gauche.png" alt="decoration">
-                <h3>Pour bien continuer</h3>
+                <div class="intitule">
+                    <h3>Pour bien continuer</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu3-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
@@ -79,7 +85,10 @@
             </div>
             <div class="menu_intitule">
                 <img src="../img/menu3-gauche.png" alt="decoration">
-                <h3>Pour bien terminer</h3>
+                <div class="intitule">
+                    <h3>Pour bien terminer</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu3-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
