--- a/html/menu_note.html
+++ b/html/menu_note.html
@@ -22,7 +22,10 @@
 			</div>
 			<div class="menu_intitule">
 				<img src="../img/menu1-droit.png" alt="decoration">
-				<h3>Prélude</h3>
+				<div class="intitule">
+					<h3>Prélude</h3>
+					<div class="line"></div>
+				</div>
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
 			<div class="menu_details">
@@ -59,7 +62,10 @@
 			</div>
 			<div class="menu_intitule">
 				<img src="../img/menu1-droit.png" alt="decoration">
-				<h3>Point d'orgue</h3>
+				<div class="intitule">
+					<h3>Point d'orgue</h3>
+					<div class="line"></div>
+				</div>
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
 			<div class="menu_details">
@@ -88,7 +94,10 @@
 			</div>
 			<div class="menu_intitule">
 				<img src="../img/menu1-droit.png" alt="decoration">
-				<h3>Mouvement final</h3>
+				<div class="intitule">
+					<h3>Mouvement final</h3>
+					<div class="line"></div>
+				</div>
 				<img src="../img/menu1-gauche.png" alt="decoration">
 			</div>
 			<div class="menu_details">
