--- a/html/menu_palette.html
+++ b/html/menu_palette.html
@@ -21,7 +21,10 @@
             </div>
             <div class="menu_intitule">
                 <img src="../img/menu4-gauche.png" alt="decoration">
-                <h3>Esquisse</h3>
+                <div class="intitule">
+                    <h3>Esquisse</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu4-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
@@ -50,7 +53,10 @@
             </div>
             <div class="menu_intitule">
                 <img src="../img/menu4-gauche.png" alt="decoration">
-                <h3>Oeuvre de maître</h3>
+                <div class="intitule">
+                    <h3>Oeuvre de maître</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu4-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
@@ -79,7 +85,10 @@
             </div>
             <div class="menu_intitule">
                 <img src="../img/menu4-gauche.png" alt="decoration">
-                <h3>Au sommet de l'art</h3>
+                <div class="intitule">
+                    <h3>Au sommet de l'art</h3>
+                    <div class="line"></div>
+                </div>
                 <img src="../img/menu4-droit.png" alt="decoration">
             </div>
             <div class="menu_details">
