--- a/html/menu_chic.html
+++ b/html/menu_chic.html
@@ -24,7 +24,7 @@
                 <img src="../img/menu2-a-gauche.png" alt="decoration">
                 <div class="intitule">
                     <h3>Pour se mettre en appétit</h3>
-                    <div class="line"></div>
+                    <div id="start" class="line"></div>
                 </div>
                 <img src="../img/menu2-a-droit.png" alt="decoration">
             </div>
@@ -58,7 +58,7 @@
                 <img src="../img/menu2-b-gauche.png" alt="decoration">
                 <div class="intitule">
                     <h3>Plaisir des papilles</h3>
-                    <div class="line"></div>
+                    <div id="main" class="line"></div>
                 </div>
                 <img src="../img/menu2-b-droit.png" alt="decoration">
             </div>
@@ -92,7 +92,7 @@
                 <img src="../img/menu2-c-gauche.png" alt="decoration">
                 <div class="intitule">
                     <h3>Gourmandises sucrées</h3>
-                    <div class="line"></div>
+                    <div id="dessert" class="line"></div>
                 </div>
                 <img src="../img/menu2-c-droit.png" alt="decoration">
             </div>
